# terminal-spinners-rs

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/: dependabot.yml
.github/misc/: .gitignore
.github/workflows/: ci.yml
examples/: aesthetic.rs  arc.rs  arrow.rs  arrow2.rs  arrow3.rs  balloon.rs  balloon2.rs  beta_wave.rs  bounce.rs  bouncing_ball.rs  bouncing_bar.rs  box_bounce.rs  box_bounce2.rs  christmas.rs  circle.rs  circle_halves.rs  circle_quarters.rs  clear_line.rs  clock.rs  dots.rs  dots10.rs  dots11.rs  dots12.rs  dots2.rs  dots3.rs  dots4.rs  dots5.rs  dots6.rs  dots7.rs  dots8.rs  dots8_bit.rs  dots9.rs  dqpb.rs  earth.rs  flip.rs  grenade.rs  grow_horizontal.rs  grow_vertical.rs  hamburger.rs  hearts.rs  (+35 more)
scripts/: fetch-cli-spinners-json-file.sh
src/: lib.rs  print.rs  spinners.rs
