[package]
name = "terminal-spinners"
description = "A library for showing terminal loading animations"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/SirWindfield/terminal-spinners-rs"
version = "0.3.1"
authors = ["SirWindfield <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
crossterm = "0.20.0"
terminal-log-symbols = "0.1.6"
terminal-spinner-data = "0.1.1"
