[package]
name = "terminal-spinners"
description = "A library for showing terminal loading animations"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mainrs/terminal-spinners-rs"
version = "0.3.2"
authors = ["mainrs <5113257+mainrs@users.noreply.github.com>"]
edition = "2018"

[dependencies]
crossterm = "0.23.2"
terminal-log-symbols = "0.1.6"
terminal-spinner-data = "0.1.1"
